--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
-{
+{"homepage": "https://github.io/willisntannpc/rct-scrabble",
   "name": "rct-scrabble",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start":"react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "react-scripts build",
+    "test": "react-scrpits test",
+    "eject":" react-scripts eject",
+    "server": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
